<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/busFilterAll"
        android:orderInCategory="100"
        android:title="@string/filterAll"
        app:showAsAction="never" />

    <item
        android:id="@+id/busFilterCloths"
        android:orderInCategory="100"
        android:title="@string/filterCloths"
        app:showAsAction="never" />

    <item
        android:id="@+id/busFilterHardware"
        android:orderInCategory="100"
        android:title="@string/filterHardware"
        app:showAsAction="never" />

    <item
        android:id="@+id/busFilterResturant"
        android:orderInCategory="100"
        android:title="@string/filterResturant"
        app:showAsAction="never" />

    <item
        android:id="@+id/busFilterShoes"
        android:orderInCategory="100"
        android:title="@string/filterShoes"
        app:showAsAction="never" />
</menu>
